# nadri

./: README.md  pyproject.toml
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.scss  App.tsx  _variables.scss  index.scss  index.tsx
frontend/src/components/: ChatInterface.tsx  Message.tsx  MessageInput.tsx  ScrollToBottomButton.tsx  ThemeToggleButton.tsx
frontend/src/components/icons/: ArrowDownIcon.tsx  MoonIcon.tsx  RetryIcon.tsx  SendIcon.tsx  StopIcon.tsx  SunIcon.tsx
frontend/src/context/: ChatContext.tsx
server/: .env  README.md  pyproject.toml
server/data/: seoul_info.txt
server/src/: test.py
server/src/api/: main.py
server/src/config/: settings.py
server/src/prompts/: multi_query_prompt.yaml
server/src/services/: chat_service.py  crawl_seoul.py  embed_data.py  llm_factory.py
server/src/utils/: logging.py
server/tests/: delete_qdrant_collection.py  test_chat_service.py  test_qdrant_connection.py
src/app/: main.py
src/model/: crawl_seoul.py  embed_to_qdrant.py  search_in_qdrant copy.py  search_in_qdrant.py  test.py
